--- a/css/styles.css
+++ b/css/styles.css
@@ -374,7 +374,9 @@ label {
 .check {
   display: block;
   position: relative;
-  padding-left: 28px;
+  padding-left: 30px;
+  font-family: 'Arial', sans-serif;
+  font-weight: normal;
   user-select: none;
   cursor: pointer; }
 
@@ -385,8 +387,8 @@ label {
   position: absolute;
   top: 50%;
   left: 0;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -396,8 +398,8 @@ label {
     content: "";
     position: absolute;
     display: none;
-    left: 6px;
-    top: 2px;
+    left: 7px;
+    top: 3px;
     width: 5px;
     height: 10px;
     border: solid #879934;
@@ -1549,7 +1551,8 @@ body.logged-in .unlogged-only {
 .messenger__messages-scroll {
   height: 100%;
   padding: 15px;
-  overflow: scroll; }
+  overflow-x: hidden;
+  overflow-y: scroll; }
   @media only screen and (min-width: 768px) {
     .messenger__messages-scroll {
       padding: 15px 30px; } }
